test_cases/tests/axum/missing_deserialize.stderr
error[E0277]: the trait bound `fn(Json<Test>) -> impl Future<Output = ()> {test}: Handler<_, _, _>` is not satisfied
   --> tests/axum/missing_deserialize.rs:6:30
    |
6   |         .route("/test", post(test));
    |                         ---- ^^^^ the trait `Handler<_, _, _>` is not implemented for `fn(Json<Test>) -> impl Future<Output = ()> {test}`
    |                         |
    |                         required by a bound introduced by this call
    |
    = note: Consider using `#[axum_macros::debug_handler]` to improve the error message
    = help: the trait `Handler<T, S, B>` is implemented for `Layered<L, H, T, S, B>`
note: required by a bound in `post`
   --> /home/weiznich/.cargo/git/checkouts/axum-5ae1ef023c614a60/a151aac/axum/src/routing/method_routing.rs:404:1
    |
404 | top_level_handler_fn!(post, POST);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `post`
    = note: this error originates in the macro `top_level_handler_fn` (in Nightly builds, run with -Z macro-backtrace for more info)
